--- a/templates/api_documentation.html
+++ b/templates/api_documentation.html
@@ -18,7 +18,7 @@
 <p><pre>
 <c style="color: red;">from</c> requests import <c style="color: red;">post</c> 
 
-<c style="color: #1ABFD5;">print</c>(<c style="color: #1ABFD5;">post</c>(<c style="color: #C3CA1E;">'http://localhost:5000/api/sheduele'</c>,
+<c style="color: #1ABFD5;">print</c>(<c style="color: #1ABFD5;">post</c>(<c style="color: #C3CA1E;">'https://webserwer.herokuapp.com/api/sheduele'</c>,
            <c style="color: orange;">json</c><c style="color: red;">=</c>{<c style="color: #C3CA1E;">'name_klass'</c>: <c style="color: #C3CA1E;">'1б'</c>, 
                  <c style="color: #C3CA1E;">'shool_id'</c>: 2, 
                  <c style="color: #C3CA1E;">'date'</c>: <c style="color: #C3CA1E;">'2021-04-16'</c>}).<c style="color: #1ABFD5;">json</c>())
